# TranskriberingsApp-HK

./: .gitignore  README.md  build.py  build.sh  entrypoint.py  pyproject.toml  transcribe-app.spec
src/transcribe_app/: config.py  download_model.py  recorder.py  transcriber.py  ui.py
